# gameview-platform

./: .env.example  .env.test.example  .gitignore  CLAUDE.md  Dockerfile.worker  HANDOFF.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
.github/workflows/: ci.yml
apps/desktop/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/resources/: gvcore-cli  gvcore-cli.bat
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  settings.rs
apps/desktop/src/components/: Header.tsx  Layout.tsx  NewProductionDialog.tsx  (+2 more)
apps/player/: .env.example  next.config.js  package.json  tailwind.config.ts  vercel.json
apps/player/src/: middleware.ts
apps/studio/: .env.example  next.config.mjs  package.json  tailwind.config.ts  vercel.json
apps/studio/docs/: PHASE_2_SPRINT_PLAN.md  STUDIO_GUIDE.md
apps/studio/src/: middleware.ts
core/: README.md
docs/: 4D_HANDOFF.md  4D_MOTION_ARCHITECTURE.md  BETA_SPRINT_PLAN.md  BRANCH_SEPARATION_GUIDE.md  BUGS.md  COST_ANALYSIS.md  DEPLOYMENT_GUIDE.md  GAUSSIAN_SPLAT_INTEGRATION.md  HANDOFF.md  INFRASTRUCTURE_SETUP.md  PRODUCTION_CHECKLIST.md  PRODUCT_BRIEF.md  PRODUCT_BRIEF_v1.2.md  SPRINT_4D_MOTION.md  SPRINT_PLAN_PHASE2.md  SPRINT_PLAN_PHASE3.md  SPRINT_PLAN_TO_BETA.md  TUTORIAL_SCRIPTS.md  VERCEL_DEPLOYMENT.md  product_brief.txt
docs/archive/: README.md  SPRINT_21_PLAN.md
scripts/: test-pipeline.ts  verify-setup.sh
(+163 files in other folders)
